--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>Fiu</title>
+      <title>Fubas Art</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -77,7 +77,7 @@
                   <div class="container">
                      <div class="row">
                         <div class="col-md-6">
-                           <h1 class="banner_taital">Best <br> Design <br>of Furnitur</h1>
+                           <h1 class="banner_taital">Palha Narutal <br> de <br>Pinos</h1>
                            <p class="banner_text">It is a long established fact that a reader will bedistracted by the readable content of </p>
                            <div class="btn_main">
                               <div class="contact_bt"><a href="#">Contact US</a></div>
@@ -140,8 +140,8 @@
                      <div class="image_2"><img src="images/img-2.png"></div>
                   </div>
                   <div class="col-md-6">
-                     <h1 class="about_taital">About Us</h1>
-                     <p class="about_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised </p>
+                     <h1 class="about_taital">Sobre Nós</h1>
+                     <p class="about_text">Somos uma fábrica localizada em Santa Catarina, com um grande estoque e variedades de cestas e palhas para decoração. Atendemos grandes demandas e fornecemos tudo para sua loja. Entre em contato hoje mesmo</p>
                      <div class="readmore_bt"><a href="#">Read More</a></div>
                   </div>
                </div>
@@ -155,13 +155,13 @@
             <div class="carousel-inner">
                <div class="carousel-item active">
                   <div class="container">
-                     <h1 class="design_taital">Our Work Furniture</h1>
-                     <p class="design_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteratio</p>
+                     <h1 class="design_taital">Alguns de nossos produtos</h1>
+                     <p class="design_text">Temos uma variedade de cestas, de diversos materiais e tamanhos. Temos também palha natural e colorida</p>
                      <div class="design_section_2">
                         <div class="row">
                            <div class="col-md-4">
                               <div class="box_main">
-                                 <p class="chair_text">Chair 01</p>
+                                 <p class="chair_text">Palha Natural 500g</p>
                                  <div class="image_3" href="#"><img src="images/img-3.png"></div>
                                  <p class="chair_text">Price $100</p>
                                  <div class="buy_bt"><a href="#">Buy Now</a></div>
@@ -169,7 +169,7 @@
                            </div>
                            <div class="col-md-4">
                               <div class="box_main">
-                                 <p class="chair_text">Chair 02</p>
+                                 <p class="chair_text">Corbelia Nº2</p>
                                  <div class="image_4" href="#"><img src="images/img-4.png"></div>
                                  <p class="chair_text">Price $100</p>
                                  <div class="buy_bt"><a href="#">Buy Now</a></div>
@@ -177,7 +177,7 @@
                            </div>
                            <div class="col-md-4">
                               <div class="box_main">
-                                 <p class="chair_text">Table</p>
+                                 <p class="chair_text">Palha Vermelha 30g</p>
                                  <div class="image_4" href="#"><img src="images/img-5.png"></div>
                                  <p class="chair_text">Price $100</p>
                                  <div class="buy_bt"><a href="#">Buy Now</a></div>
@@ -189,30 +189,30 @@
                </div>
                <div class="carousel-item">
                   <div class="container">
-                     <h1 class="design_taital">Our Work Furniture</h1>
-                     <p class="design_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteratio</p>
+                     <h1 class="design_taital">Diversidade em Palha</h1>
+                     <p class="design_text">Temos palha natural e palha colorida, para todos os gostos</p>
                      <div class="design_section_2">
                         <div class="row">
                            <div class="col-md-4">
                               <div class="box_main">
-                                 <p class="chair_text">Chair 01</p>
-                                 <div class="image_3" href="#"><img src="images/img-3.png"></div>
+                                 <p class="chair_text">Palha Azul 30g</p>
+                                 <div class="image_3" href="#"><img src="images/palhaazul.png"></div>
                                  <p class="chair_text">Price $100</p>
                                  <div class="buy_bt"><a href="#">Buy Now</a></div>
                               </div>
                            </div>
                            <div class="col-md-4">
                               <div class="box_main">
-                                 <p class="chair_text">Chair 02</p>
-                                 <div class="image_4" href="#"><img src="images/img-4.png"></div>
+                                 <p class="chair_text">Palha Natural 40g</p>
+                                 <div class="image_4" href="#"><img src="images/palhanatural.png"></div>
                                  <p class="chair_text">Price $100</p>
                                  <div class="buy_bt"><a href="#">Buy Now</a></div>
                               </div>
                            </div>
                            <div class="col-md-4">
                               <div class="box_main">
-                                 <p class="chair_text">Table</p>
-                                 <div class="image_4" href="#"><img src="images/img-5.png"></div>
+                                 <p class="chair_text">Palha Rosa 30g</p>
+                                 <div class="image_4" href="#"><img src="images/palharosa.png"></div>
                                  <p class="chair_text">Price $100</p>
                                  <div class="buy_bt"><a href="#">Buy Now</a></div>
                               </div>
@@ -223,14 +223,14 @@
                </div>
                <div class="carousel-item">
                   <div class="container">
-                     <h1 class="design_taital">Our Work Furniture</h1>
-                     <p class="design_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteratio</p>
+                     <h1 class="design_taital">Produtos em estoque</h1>
+                     <p class="design_text">Faça seu pedido hoje mesmo, estaremos pronto para atende-lo</p>
                      <div class="design_section_2">
                         <div class="row">
                            <div class="col-md-4">
                               <div class="box_main">
                                  <p class="chair_text">Chair 01</p>
-                                 <div class="image_3" href="#"><img src="images/img-3.png"></div>
+                                 <div class="image_3" href="#"><img src="images/estoquecorbelia.png"></div>
                                  <p class="chair_text">Price $100</p>
                                  <div class="buy_bt"><a href="#">Buy Now</a></div>
                               </div>
@@ -238,7 +238,7 @@
                            <div class="col-md-4">
                               <div class="box_main">
                                  <p class="chair_text">Chair 02</p>
-                                 <div class="image_3" href="#"><img src="images/img-4.png"></div>
+                                 <div class="image_3" href="#"><img src="images/estoquepalha.png"></div>
                                  <p class="chair_text">Price $100</p>
                                  <div class="buy_bt"><a href="#">Buy Now</a></div>
                               </div>
@@ -246,7 +246,7 @@
                            <div class="col-md-4">
                               <div class="box_main">
                                  <p class="chair_text">Table</p>
-                                 <div class="image_3" href="#"><img src="images/img-5.png"></div>
+                                 <div class="image_3" href="#"><img src="images/estoquepalhacolorida.png"></div>
                                  <p class="chair_text">Price $100</p>
                                  <div class="buy_bt"><a href="#">Buy Now</a></div>
                               </div>
