--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
                            </div>
                            <div class="col-md-4">
                               <div class="box_main">
-                                 <p class="chair_text">Corbelia Nº2</p>
-                                 <div class="image_4" href="#"><img src="images/img-4.png"></div>
+                                 <p class="chair_text">Corbelia Nº2 c/ alça</p>
+                                 <div class="image_3" href="#"><img src="images/img-4.png"></div>
                                  <p class="chair_text">Price $100</p>
                                  <div class="buy_bt"><a href="#">Buy Now</a></div>
                               </div>
@@ -178,7 +178,7 @@
                            <div class="col-md-4">
                               <div class="box_main">
                                  <p class="chair_text">Palha Vermelha 30g</p>
-                                 <div class="image_4" href="#"><img src="images/img-5.png"></div>
+                                 <div class="image_3" href="#"><img src="images/img-5.png"></div>
                                  <p class="chair_text">Price $100</p>
                                  <div class="buy_bt"><a href="#">Buy Now</a></div>
                               </div>
@@ -204,7 +204,7 @@
                            <div class="col-md-4">
                               <div class="box_main">
                                  <p class="chair_text">Palha Natural 40g</p>
-                                 <div class="image_4" href="#"><img src="images/palhanatural.png"></div>
+                                 <div class="image_3" href="#"><img src="images/palhanatural.png"></div>
                                  <p class="chair_text">Price $100</p>
                                  <div class="buy_bt"><a href="#">Buy Now</a></div>
                               </div>
@@ -212,7 +212,7 @@
                            <div class="col-md-4">
                               <div class="box_main">
                                  <p class="chair_text">Palha Rosa 30g</p>
-                                 <div class="image_4" href="#"><img src="images/palharosa.png"></div>
+                                 <div class="image_3" href="#"><img src="images/palharosa.png"></div>
                                  <p class="chair_text">Price $100</p>
                                  <div class="buy_bt"><a href="#">Buy Now</a></div>
                               </div>
