--- a/index.html
+++ b/index.html
@@ -34,36 +34,36 @@
       <div class="header_section">
          <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
-               <a class="logo" href="index.html"><img src="images/logo.png"></a>
+               <a class="logo" href="index.html"><img src="images/fubaslogo.png"></a>
                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                <span class="navbar-toggler-icon"></span>
                </button>
                <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav mr-auto">
                      <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="nav-link" href="index.html">Inicio</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
+                        <a class="nav-link" href="about.html">Sobre</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="design.html">Design</a>
+                        <a class="nav-link" href="design.html">Produtos</a>
                      </li>
                      <li class="nav-item">
                         <a class="nav-link" href="shop.html">Shop</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
+                        <a class="nav-link" href="contact.html">Contato</a>
                      </li>
                   </ul>
-                  <form class="form-inline my-2 my-lg-0">
+                  <!-- <form class="form-inline my-2 my-lg-0">
                      <div class="search_icon">
                         <ul>
                            <li><a href="#"><img src="images/search-icon.png"></a></li>
                            <li><a href="#"><img src="images/user-icon.png"></a></li>
                         </ul>
                      </div>
-                  </form>
+                  </form> -->
                </div>
          </nav>
          </div>
@@ -122,12 +122,12 @@
                   </div>
                </div>
             </div>
-            <a class="carousel-control-prev" href="#main_slider" role="button" data-slide="prev">
+            <!-- <a class="carousel-control-prev" href="#main_slider" role="button" data-slide="prev">
             <i style="font-style: initial;">01</i>
             </a>
             <a class="carousel-control-next" href="#main_slider" role="button" data-slide="next">
             <i style="font-style: initial;">02</i>
-            </a>
+            </a> -->
          </div>
       </div>
       <!-- banner section end -->
@@ -264,7 +264,7 @@
             </a>
          </div>
          <div class="container">
-            <div class="read_bt"><a href="#">Read More</a></div>
+            <div class="read_bt"><a href="shop.html">Ver mais produtos</a></div>
          </div>
       </div>
       <!--  design section end -->
@@ -302,7 +302,7 @@
                   <div class="col-md-6">
                      <div class="map_main">
                         <div class="map-responsive">
-                           <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&amp;q=Eiffel+Tower+Paris+France" width="600" height="360" frameborder="0" style="border:0; width: 100%;" allowfullscreen=""></iframe>
+                           <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&amp;q=campinas+bocaina+do+sul" width="600" height="360" frameborder="0" style="border:0; width: 100%;" allowfullscreen=""></iframe>
                         </div>
                      </div>
                   </div>
@@ -316,8 +316,8 @@
          <div class="container">
             <div class="footer_location_text">
                <ul>
-                  <li><img src="images/map-icon.png"><span class="padding_left_10"><a href="#">Loram Ipusm hosting web</a></span></li>
-                  <li><img src="images/call-icon.png"><span class="padding_left_10"><a href="#">Call : +7586656566</a></span></li>
+                  <li><img src="images/map-icon.png"><span class="padding_left_10"><a href="#">Bocaina do Sul, SC</a></span></li>
+                  <li><img src="images/call-icon.png"><span class="padding_left_10"><a href="https://wa.me/5549991642873">WhatsApp: 49 99164-2873</a></span></li>
                   <li><img src="images/mail-icon.png"><span class="padding_left_10"><a href="#">demo@gmail.com</a></span></li>
                </ul>
             </div>
