--- a/design.html
+++ b/design.html
@@ -84,7 +84,7 @@
             <div class="row">
                <div class="col-md-4">
                   <div class="box_main">
-                     <p class="chair_text">Chair 01</p>
+                     <p class="chair_text">Dois Vasos</p>
                      <div class="image_shop" href="#"><img src="images/cestas/cestaoval.png"></div>
                      <p class="chair_text">Price $100</p>
                      <div class="buy_bt"><a href="#">Buy Now</a></div>
@@ -92,7 +92,7 @@
                </div>
                <div class="col-md-4">
                   <div class="box_main">
-                     <p class="chair_text">Chair 02</p>
+                     <p class="chair_text">Talqueira de Madeira F/20</p>
                      <div class="image_shop" href="#"><img src="images/cestas/cestaredondamadeira.png"></div>
                      <p class="chair_text">Price $100</p>
                      <div class="buy_bt"><a href="#">Buy Now</a></div>
@@ -100,7 +100,7 @@
                </div>
                <div class="col-md-4">
                   <div class="box_main">
-                     <p class="chair_text">Table</p>
+                     <p class="chair_text">Cesta Cabeção</p>
                      <div class="image_shop" href="#"><img src="images/cestas/cestavime.png"></div>
                      <p class="chair_text">Price $100</p>
                      <div class="buy_bt"><a href="#">Buy Now</a></div>
@@ -113,7 +113,7 @@
             <div class="row">
                <div class="col-md-4">
                   <div class="box_main">
-                     <p class="chair_text">Chair 01</p>
+                     <p class="chair_text">Corbélia Nº2 c/ Alça</p>
                      <div class="image_shop" href="#"><img src="images/cestas/corbelian2.png"></div>
                      <p class="chair_text">Price $100</p>
                      <div class="buy_bt"><a href="#">Buy Now</a></div>
@@ -121,7 +121,7 @@
                </div>
                <div class="col-md-4">
                   <div class="box_main">
-                     <p class="chair_text">Chair 02</p>
+                     <p class="chair_text">Frente Baixa Nº1 (p) c/ Alça</p>
                      <div class="image_shop" href="#"><img src="images/cestas/frentebaixa.png"></div>
                      <p class="chair_text">Price $100</p>
                      <div class="buy_bt"><a href="#">Buy Now</a></div>
@@ -129,7 +129,7 @@
                </div>
                <div class="col-md-4">
                   <div class="box_main">
-                     <p class="chair_text">Table</p>
+                     <p class="chair_text">Jangada de Vime</p>
                      <div class="image_shop" href="#"><img src="images/cestas/jangada.png"></div>
                      <p class="chair_text">Price $100</p>
                      <div class="buy_bt"><a href="#">Buy Now</a></div>
