--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <!-- mobile metas -->
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <meta name="viewport" content="initial-scale=1, maximum-scale=1">
+      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
       <!-- site metas -->
       <title>Fubas Art</title>
       <meta name="keywords" content="">
@@ -34,37 +33,7 @@
       <div class="header_section">
          <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
-               <a class="logo" href="index.html"><img src="images/fubaslogo.png"></a>
-               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-               <span class="navbar-toggler-icon"></span>
-               </button>
-               <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                  <ul class="navbar-nav mr-auto">
-                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Inicio</a>
-                     </li>
-                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">Sobre</a>
-                     </li>
-                     <li class="nav-item">
-                        <a class="nav-link" href="design.html">Produtos</a>
-                     </li>
-                     <li class="nav-item">
-                        <a class="nav-link" href="shop.html">Shop</a>
-                     </li>
-                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contato</a>
-                     </li>
-                  </ul>
-                  <!-- <form class="form-inline my-2 my-lg-0">
-                     <div class="search_icon">
-                        <ul>
-                           <li><a href="#"><img src="images/search-icon.png"></a></li>
-                           <li><a href="#"><img src="images/user-icon.png"></a></li>
-                        </ul>
-                     </div>
-                  </form> -->
-               </div>
+               <a class="logo" href="index.html"><img src="images/1.png" alt="Logo Fubas Art" style="width: 150px; height: auto;"></a>
          </nav>
          </div>
       </div>
@@ -78,42 +47,7 @@
                      <div class="row">
                         <div class="col-md-6">
                            <h1 class="banner_taital">Palha Narutal <br> de <br>Pinos</h1>
-                           <p class="banner_text">It is a long established fact that a reader will bedistracted by the readable content of </p>
-                           <div class="btn_main">
-                              <div class="contact_bt"><a href="#">Contact US</a></div>
-                           </div>
-                        </div>
-                        <div class="col-md-6">
-                           <div class="image_1"><img src="images/img-1.png"></div>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-               <div class="carousel-item">
-                  <div class="container">
-                     <div class="row">
-                        <div class="col-md-6">
-                           <h1 class="banner_taital">Best <br> Design <br>of Furnitur</h1>
-                           <p class="banner_text">It is a long established fact that a reader will bedistracted by the readable content of </p>
-                           <div class="btn_main">
-                              <div class="contact_bt"><a href="#">Contact US</a></div>
-                           </div>
-                        </div>
-                        <div class="col-md-6">
-                           <div class="image_1"><img src="images/img-1.png"></div>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-               <div class="carousel-item">
-                  <div class="container">
-                     <div class="row">
-                        <div class="col-md-6">
-                           <h1 class="banner_taital">Best <br> Design <br>of Furnitur</h1>
-                           <p class="banner_text">It is a long established fact that a reader will bedistracted by the readable content of </p>
-                           <div class="btn_main">
-                              <div class="contact_bt"><a href="#">Contact US</a></div>
-                           </div>
+                           <p class="banner_text">A palha de pinus é um material natural e versátil, proveniente da madeira das árvores de pinus. Por ser 100% natural e seco, ela é amplamente utilizada em diversas áreas, como jardinagem, decoração e artesanato. Sua cor é clara, característica da madeira de pinus, e pode apresentar variações sutis de tonalidade entre diferentes lotes, devido à sua origem orgânica. Além de suas características estéticas, a palha de pinus é valorizada por sua durabilidade e por ser um produto ecológico, amplamente acessível para uma série de aplicações práticas e criativas.</p>
                         </div>
                         <div class="col-md-6">
                            <div class="image_1"><img src="images/img-1.png"></div>
@@ -122,12 +56,6 @@
                   </div>
                </div>
             </div>
-            <!-- <a class="carousel-control-prev" href="#main_slider" role="button" data-slide="prev">
-            <i style="font-style: initial;">01</i>
-            </a>
-            <a class="carousel-control-next" href="#main_slider" role="button" data-slide="next">
-            <i style="font-style: initial;">02</i>
-            </a> -->
          </div>
       </div>
       <!-- banner section end -->
@@ -141,8 +69,7 @@
                   </div>
                   <div class="col-md-6">
                      <h1 class="about_taital">Sobre Nós</h1>
-                     <p class="about_text">Somos uma fábrica localizada em Santa Catarina, com um grande estoque e variedades de cestas e palhas para decoração. Atendemos grandes demandas e fornecemos tudo para sua loja. Entre em contato hoje mesmo</p>
-                     <div class="readmore_bt"><a href="#">Read More</a></div>
+                     <p class="about_text">Somos uma produtora de artefatos artesanais localizada em Santa Catarina, focada na produção de cestas e palha de pinus para decorações e arranjos. Atendemos grandes demandas e fornecemos tudo para sua loja. Entre em contato e saiba mais</p>
                   </div>
                </div>
             </div>
@@ -155,32 +82,25 @@
             <div class="carousel-inner">
                <div class="carousel-item active">
                   <div class="container">
-                     <h1 class="design_taital">Alguns de nossos produtos</h1>
-                     <p class="design_text">Temos uma variedade de cestas, de diversos materiais e tamanhos. Temos também palha natural e colorida</p>
+                     <h1 class="design_taital">Produtos</h1>
                      <div class="design_section_2">
                         <div class="row">
                            <div class="col-md-4">
                               <div class="box_main">
                                  <p class="chair_text">Palha Natural 500g</p>
                                  <div class="image_3" href="#"><img src="images/img-3.png"></div>
-                                 <p class="chair_text">Price $100</p>
-                                 <div class="buy_bt"><a href="#">Buy Now</a></div>
                               </div>
                            </div>
                            <div class="col-md-4">
                               <div class="box_main">
                                  <p class="chair_text">Corbelia Nº2 c/ alça</p>
                                  <div class="image_3" href="#"><img src="images/img-4.png"></div>
-                                 <p class="chair_text">Price $100</p>
-                                 <div class="buy_bt"><a href="#">Buy Now</a></div>
                               </div>
                            </div>
                            <div class="col-md-4">
                               <div class="box_main">
                                  <p class="chair_text">Palha Vermelha 30g</p>
                                  <div class="image_3" href="#"><img src="images/img-5.png"></div>
-                                 <p class="chair_text">Price $100</p>
-                                 <div class="buy_bt"><a href="#">Buy Now</a></div>
                               </div>
                            </div>
                         </div>
@@ -189,32 +109,25 @@
                </div>
                <div class="carousel-item">
                   <div class="container">
-                     <h1 class="design_taital">Diversidade em Palha</h1>
-                     <p class="design_text">Temos palha natural e palha colorida, para todos os gostos</p>
+                     <h1 class="design_taital">Produtos</h1>
                      <div class="design_section_2">
                         <div class="row">
                            <div class="col-md-4">
                               <div class="box_main">
                                  <p class="chair_text">Palha Azul 30g</p>
                                  <div class="image_3" href="#"><img src="images/palhaazul.png"></div>
-                                 <p class="chair_text">Price $100</p>
-                                 <div class="buy_bt"><a href="#">Buy Now</a></div>
                               </div>
                            </div>
                            <div class="col-md-4">
                               <div class="box_main">
                                  <p class="chair_text">Palha Natural 40g</p>
                                  <div class="image_3" href="#"><img src="images/palhanatural.png"></div>
-                                 <p class="chair_text">Price $100</p>
-                                 <div class="buy_bt"><a href="#">Buy Now</a></div>
                               </div>
                            </div>
                            <div class="col-md-4">
                               <div class="box_main">
                                  <p class="chair_text">Palha Rosa 30g</p>
                                  <div class="image_3" href="#"><img src="images/palharosa.png"></div>
-                                 <p class="chair_text">Price $100</p>
-                                 <div class="buy_bt"><a href="#">Buy Now</a></div>
                               </div>
                            </div>
                         </div>
@@ -223,32 +136,25 @@
                </div>
                <div class="carousel-item">
                   <div class="container">
-                     <h1 class="design_taital">Produtos em estoque</h1>
-                     <p class="design_text">Faça seu pedido hoje mesmo, estaremos pronto para atende-lo</p>
+                     <h1 class="design_taital">Produtos</h1>
                      <div class="design_section_2">
                         <div class="row">
                            <div class="col-md-4">
                               <div class="box_main">
                                  <p class="chair_text">Chair 01</p>
                                  <div class="image_3" href="#"><img src="images/estoquecorbelia.png"></div>
-                                 <p class="chair_text">Price $100</p>
-                                 <div class="buy_bt"><a href="#">Buy Now</a></div>
                               </div>
                            </div>
                            <div class="col-md-4">
                               <div class="box_main">
-                                 <p class="chair_text">Chair 02</p>
+                                 <p class="chair_text">"Fardinho" de 50 un</p>
                                  <div class="image_3" href="#"><img src="images/estoquepalha.png"></div>
-                                 <p class="chair_text">Price $100</p>
-                                 <div class="buy_bt"><a href="#">Buy Now</a></div>
                               </div>
                            </div>
                            <div class="col-md-4">
                               <div class="box_main">
-                                 <p class="chair_text">Table</p>
+                                 <p class="chair_text">Palha 50un (cores sortidas)</p>
                                  <div class="image_3" href="#"><img src="images/estoquepalhacolorida.png"></div>
-                                 <p class="chair_text">Price $100</p>
-                                 <div class="buy_bt"><a href="#">Buy Now</a></div>
                               </div>
                            </div>
                         </div>
@@ -263,27 +169,8 @@
             <i class="fa fa-long-arrow-right" style="font-size:24px"></i>
             </a>
          </div>
-         <div class="container">
-            <div class="read_bt"><a href="shop.html">Ver mais produtos</a></div>
-         </div>
       </div>
       <!--  design section end -->
-      <!--  newsletter section start -->
-      <div class="newsletter_section layout_padding">
-         <div class="container">
-            <div class="row">
-               <div class="col-md-6">
-                  <div class="imgage_6"><img src="images/img-6.png"></div>
-               </div>
-               <div class="col-md-6">
-                  <h1 class="newsletter_taital">Subscribe Newsletter</h1>
-                  <input type="text" class="email_text" placeholder="Enter Your Email" name="Enter Your Email">
-                  <div class="subscribe_bt"><a href="#">Subscribe Now</a></div>
-               </div>
-            </div>
-         </div>
-      </div>
-      <!--  newsletter section end -->
       <!-- contact section start -->
       <div class="contact_section layout_padding">
          <div class="container">
@@ -291,12 +178,12 @@
                <div class="row">
                   <div class="col-md-6">
                      <div class="mail_section_1">
-                        <h1 class="contact_taital">Contact Us</h1>
-                        <input type="text" class="mail_text" placeholder="Name" name="text">
+                        <h1 class="contact_taital">Entre em contato conosco</h1>
+                        <input type="text" class="mail_text" placeholder="Nome" name="text">
                         <input type="text" class="mail_text" placeholder="Email" name="text">
-                        <input type="text" class="mail_text" placeholder="Phone Number" name="text">
-                        <textarea class="massage-bt" placeholder="Massage" rows="5" id="comment" name="Massage"></textarea>
-                        <div class="send_bt"><a href="#">SEND</a></div>
+                        <input type="text" class="mail_text" placeholder="Número de celular" name="text">
+                        <textarea class="massage-bt" placeholder="Mensagem" rows="5" id="comment" name="Massage"></textarea>
+                        <div class="send_bt"><a href="#">ENVIAR</a></div>
                      </div>
                   </div>
                   <div class="col-md-6">
@@ -320,36 +207,6 @@
                   <li><img src="images/call-icon.png"><span class="padding_left_10"><a href="https://wa.me/5549991642873">WhatsApp: 49 99164-2873</a></span></li>
                   <li><img src="images/mail-icon.png"><span class="padding_left_10"><a href="#">demo@gmail.com</a></span></li>
                </ul>
-            </div>
-            <div class="row">
-               <div class="col-lg-3 col-sm-6">
-                  <h2 class="useful_text">Useful link </h2>
-                  <div class="footer_menu">
-                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="design.html">Our Designe</a></li>
-                        <li><a href="contact.html">Contact Us</a></li>
-                     </ul>
-                  </div>
-               </div>
-               <div class="col-lg-3 col-sm-6">
-                  <h2 class="useful_text">Repair</h2>
-                  <p class="lorem_text">Lorem ipsum dolor sit amet, consectetur  adipiscinaliqua  Loreadipiscing </p>
-               </div>
-               <div class="col-lg-3 col-sm-6">
-                  <h2 class="useful_text">Social Media</h2>
-                  <div id="social">
-                     <a class="facebookBtn smGlobalBtn active" href="#" ></a>
-                     <a class="twitterBtn smGlobalBtn" href="#" ></a>
-                     <a class="googleplusBtn smGlobalBtn" href="#" ></a>
-                     <a class="linkedinBtn smGlobalBtn" href="#" ></a>
-                  </div>
-               </div>
-               <div class="col-sm-6 col-lg-3">
-                  <h1 class="useful_text">Our Repair center</h1>
-                  <p class="footer_text">Lorem ipsum dolor sit amet, consectetur adipiscinaliquaLoreadipiscing </p>
-               </div>
             </div>
          </div>
       </div>
